--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 * {
   margin: 0;
   padding: 0;
@@ -10,6 +11,21 @@ html,
 body {
   height: 100%;
   width: 100%;
+}
+body{
+  overflow-x:hidden;
+}
+
+#crsr{
+  height: 2vw;
+  width: 2vw;
+  border-radius: 50%;
+ /* background-color: white;*/
+ border: 1px solid #ffffffbe;
+  position: fixed;
+  z-index: 9999;
+  mix-blend-mode: difference;
+  transform: translate(-50%, -50%);
 }
 #loader {
   height: 100%;
@@ -103,3 +119,218 @@ body {
   width: 100%;
   background-color: #151515;
 }
+
+#page1 #nav{
+  display: flex;
+  align-items:center;
+  justify-content: space-between;
+  padding: 2.3vw 5.5vw;
+}
+
+#nav-part2{
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  gap:3vw;
+}
+
+#nav-part2 h4 {
+  font-size: 0.8vw;
+  font-weight: 500;
+}
+
+.hero{
+ /* background-color: red;*/
+  width:72%;
+  margin-left:27%;
+  height: fit-content;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  position: relative;
+  z-index: 9999;
+
+}
+.hero:nth-child(2){
+  margin-top:18vh;
+}
+
+.hero h1{
+  font-size: 7.2vw;
+  font-weight: 600;
+  text-transform: uppercase;
+  line-height: 7.2vw;
+}
+.hero h2, .hero h3 {
+  font-size: 7.2vw;
+  font-weight: 600;
+  text-transform: uppercase;
+  line-height: 7.2vw;
+}
+.hero h2{
+  font-size: 7.2vw;
+  font-weight: 600;
+  text-transform: uppercase;
+  line-height: 7.2vw;
+  border-bottom: 0.5vw solid #fff;
+  padding-bottom: 0.8vw;
+  transition: all ease 0.3s;
+}
+
+.hero h2:hover{
+  -webkit-text-stroke: 2px #fff;
+  color: transparent;
+  font-weight: 500;
+  border-bottom: 0.5vw  solid #ffffff00;
+}
+
+#page2{
+  height: 100vh;
+  width: 100%;
+  padding:20vh;
+  position: relative;
+ 
+
+}
+#video-container{
+  height: 60vh;
+  width:70vw;
+  position:relative;
+  left:28%;
+  background-image: url(https://obys.agency/wp-content/uploads/2022/11/Showreel-2022-preview.jpg);
+}
+
+#video-container  img{
+  position:  absolute;
+  height:100%;
+  width:100%;
+  object-fit:cover;
+  top : 0;
+}
+
+#video-container video{
+  height: 100%;
+  width: 100%;
+  object-fit:cover;
+}
+
+#video-cursor{
+  background-color: #FFA63D;
+  height: 9vw;
+  width:9vw;
+  border-radius:50%;
+  position:absolute;
+  top:-15%;
+  left:70%;
+  display: flex;
+  align-items:center;
+  justify-content: center;
+  z-index: 999;
+}
+
+#video-cursor  {
+  font-size: 2vw;
+}
+
+#page3{
+  height: 100vh;
+  width: 100%;
+  background-color: rgb(32, 31, 31);
+  position: relative;
+}
+
+#page4{
+  min-height: 100vh;
+  width: 100%;
+  background-color: rgb(36, 36, 36);
+  padding:7vh  0;
+}
+#page4-content{
+  width:72vw;
+  position:relative;
+  margin-left: 28%;
+}
+
+#page4-content h1{
+  font-size: 7.2vw;
+  font-weight: 600;
+  text-transform: uppercase;
+}
+
+#page4-content .underline{
+  width: 100%;
+  height: 2px;
+  background-color: #fff;
+  margin: 5vw 0;
+}
+
+#page4-content>p{
+  font-size: 2.05vw;
+  width: 50%;
+  margin-bottom:3vw;
+}
+
+#page4-flex{
+  display: flex;
+}
+
+#page4-flex img{
+  width: 48%;
+  height: auto;
+}
+#page4-flex p{
+  font-size: 0.9vw;
+  width: 19%;
+  margin-left: 1vw;
+}
+
+#page4-blue-div{
+  background-color: #3F7DF4;
+  width:30vw;
+  padding:4vw 2vw;
+  position:relative;
+  margin-top:-35vh;
+  margin-left: 26vw;
+}
+
+.blue-div-elem{
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  /*background-color: red;  */
+  padding:  1.7vw 0;
+  border-bottom: 2px solid #ffffff94;
+}
+
+.blue-div-elem h4{
+  font-size: 1.2vw;
+  font-weight: 500;
+}
+.blue-div-elem p{
+  width: 50%;
+  font-size: 0.8vw;
+
+}
+
+#page5{
+  min-height: 100vh;
+  width: 100%;
+  padding: relative;
+}
+
+.elem{
+  background-color: red;
+  white-space: nowrap;
+  overflow-x:auto;
+}
+
+.elem h1{
+  font-size: 7vw;
+  -webkit-text-stroke: 1px #fff;
+  font-weight: 400;
+  text-transform: uppercase;
+  color:transparent;
+  display: inline-block;
+  margin-right:16px;
+}
+
